src/tests/fixtures/enums/ExplicitlyNumericEnum.ts
/** @gqlEnum */
enum Enum {
  VALID = 1,
  INVALID = 2,
}
